<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>C42_Toollist</class>
 <widget class="QMainWindow" name="C42_Toollist">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>560</width>
    <height>145</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>560</width>
    <height>110</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>560</width>
    <height>145</height>
   </size>
  </property>
  <property name="contextMenuPolicy">
   <enum>Qt::ActionsContextMenu</enum>
  </property>
  <property name="windowTitle">
   <string>C42_Toollist</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../Resources.qrc">
    <normaloff>:/newPrefix/data/Icon.png</normaloff>:/newPrefix/data/Icon.png</iconset>
  </property>
  <property name="toolTip">
   <string>C42_Toollist</string>
  </property>
  <property name="styleSheet">
   <string notr="true">/*Copyright (c) DevSec Studio. All rights reserved.

MIT License

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the &quot;Software&quot;), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED *AS IS*, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
*/

/*-----QWidget-----*/
QWidget
{
	background-color: #232430;
	color: #000000;
	border-color: #000000;

}


/*-----QLabel-----*/
QLabel
{
	background-color: #232430;
	color: #c1c1c1;
	border-color: #000000;

}


/*-----QPushButton-----*/
QPushButton
{
	background-color: #ff9c2b;
	color: #000000;
	font-weight: bold;
	border-style: solid;
	border-color: #000000;
	padding: 6px;

}


QPushButton::hover
{
	background-color: #ffaf5d;

}


QPushButton::pressed
{
	background-color: #dd872f;

}


/*-----QToolButton-----*/
QToolButton
{
	background-color: #ff9c2b;
	color: #000000;
	font-weight: bold;
	border-style: solid;
	border-color: #000000;
	padding: 6px;

}


QToolButton::hover
{
	background-color: #ffaf5d;

}


QToolButton::pressed
{
	background-color: #dd872f;

}


/*-----QLineEdit-----*/
QLineEdit
{
	background-color: #38394e;
	color: #c1c1c1;
	border-style: solid;
	border-width: 1px;
	border-color: #4a4c68;

}


/*-----QTableView-----*/
QTableView, 
QHeaderView, 
QTableView::item 
{
	background-color: #232430;
	color: #c1c1c1;
	border: none;

}


QTableView::item:selected 
{ 
    background-color: #41424e;
    color: #c1c1c1;

}


QHeaderView::section:horizontal 
{
    background-color: #232430;
	border: 1px solid #37384d;
	padding: 5px;

}


QTableView::indicator{
	background-color: #1d1d28;
	border: 1px solid #37384d;

}


QTableView::indicator:checked{
	image:url(&quot;./ressources/check.png&quot;); /*To replace*/
	background-color: #1d1d28;

}

/*-----QTabWidget-----*/
QTabWidget::pane 
{ 
    border: none;

}


QTabWidget::tab-bar 
{
    left: 5px; 

}


QTabBar::tab 
{
    color: #c1c1c1;
    min-width: 1px;
	padding-left: 25px;
	margin-left:-22px;
    height: 28px;
	border: none;

}


QTabBar::tab:selected 
{
    color: #c1c1c1;
	font-weight: bold;
    height: 28px;

}


QTabBar::tab:!first 
{
    margin-left: -20px;

}


QTabBar::tab:hover 
{
    color: #DDD;

}


/*-----QScrollBar-----*/
QScrollBar:horizontal 
{
    background-color: transparent;
    height: 8px;
    margin: 0px;
    padding: 0px;

}


QScrollBar::handle:horizontal 
{
    border: none;
	min-width: 100px;
    background-color: #56576c;

}


QScrollBar::add-line:horizontal, 
QScrollBar::sub-line:horizontal,
QScrollBar::add-page:horizontal, 
QScrollBar::sub-page:horizontal 
{
    width: 0px;
    background-color: transparent;

}


QScrollBar:vertical 
{
    background-color: transparent;
    width: 8px;
    margin: 0;

}


QScrollBar::handle:vertical 
{
    border: none;
	min-height: 100px;
    background-color: #56576c;

}


QScrollBar::add-line:vertical, 
QScrollBar::sub-line:vertical,
QScrollBar::add-page:vertical, 
QScrollBar::sub-page:vertical 
{
    height: 0px;
    background-color: transparent;

}
</string>
  </property>
  <property name="tabShape">
   <enum>QTabWidget::Rounded</enum>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QLineEdit" name="OriginalPath">
    <property name="enabled">
     <bool>true</bool>
    </property>
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
      <width>441</width>
      <height>31</height>
     </rect>
    </property>
    <property name="cursor">
     <cursorShape>ArrowCursor</cursorShape>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="dragEnabled">
     <bool>true</bool>
    </property>
    <property name="readOnly">
     <bool>true</bool>
    </property>
    <property name="placeholderText">
     <string>C:\</string>
    </property>
   </widget>
   <widget class="QPushButton" name="BTN_Laden">
    <property name="geometry">
     <rect>
      <x>460</x>
      <y>10</y>
      <width>91</width>
      <height>71</height>
     </rect>
    </property>
    <property name="cursor">
     <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>Datei Laden</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="FinalPath">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>50</y>
      <width>441</width>
      <height>31</height>
     </rect>
    </property>
    <property name="cursor">
     <cursorShape>ArrowCursor</cursorShape>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="dragEnabled">
     <bool>true</bool>
    </property>
    <property name="readOnly">
     <bool>true</bool>
    </property>
    <property name="placeholderText">
     <string>C:\</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>255</x>
      <y>125</y>
      <width>50</width>
      <height>15</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>10</pointsize>
     </font>
    </property>
    <property name="text">
     <string>V0.1</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QPushButton" name="BTN_umwandeln">
    <property name="geometry">
     <rect>
      <x>230</x>
      <y>90</y>
      <width>100</width>
      <height>30</height>
     </rect>
    </property>
    <property name="cursor">
     <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string>Umwandeln</string>
    </property>
   </widget>
  </widget>
 </widget>
 <resources>
  <include location="../Resources.qrc"/>
 </resources>
 <connections/>
</ui>
